better @media styles

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
         </section>
         <section class="silver-background flex-no-wrap left-image-section justify-content-center align-items-center"> <!-- Non-padded section, posibly an opinions section -->
-            <img src="./media/ilustrations/image 9.png" alt="img">
+            <img src="./media/ilustrations/image 9.png" alt="img" class="sm-hide">
             <div class="compact-text-container w-50">
                 <p class="normal-p grey-font">Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien, vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.</p>
                 <h4 class="green-font">Tim Smith</h4>
