img names space deleted

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </section>
         <section class="left-image-section flex-no-wrap padded-section align-items-center"> <!-- Padded section -->
-            <img src="./media/ilustrations/Frame 35.png" alt="img">
+            <img src="./media/ilustrations/Frame-35.png" alt="img">
             <div class="text-container">
                 <h3 class="big-font d-grey-font">The unseen of spending three years at Pixelgrade</h3>
                 <p class="normal-p grey-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
@@ -122,13 +122,13 @@
             </div>
         </section>
         <section class="silver-background flex-no-wrap left-image-section justify-content-center align-items-center"> <!-- Non-padded section, posibly an opinions section -->
-            <img src="./media/ilustrations/image 9.png" alt="img" class="sm-hide">
+            <img src="./media/ilustrations/image-9.png" alt="img" class="sm-hide">
             <div class="compact-text-container w-50">
                 <p class="normal-p grey-font">Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien, vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.</p>
                 <h4 class="green-font">Tim Smith</h4>
                 <p class="l-grey-font">British Dragon Boat Racing Association</p>
                 <div class="flex-no-wrap justify-content-between">
-                    <img src="./media/Frame 14.png" alt="img" class="flex-0">
+                    <img src="./media/ilustrations/Frame-14.png 14.png" alt="img" class="flex-0">
                     <a class="normal-p green-font right-arrow relative">Meet all customers </a>
                 </div>
             </div>
@@ -139,22 +139,22 @@
                 <p class="normal-p grey-font w-50">The Nexcent blog is the best place to read about the latest membership insights, trends and more. See who's joining the community, read about how our community are increasing their membership income and lot's more.</p>
             </div>
             <div class="flex-wrap justify-content-around align-items-center"> <!-- Container for articles -->
-                <article class="card-under-top-image relative"> <!-- Article semantic tag for card type container--> -->
-                    <img src="./media/ilustrations/image 18.png" alt="img" class="under-image"> <!-- Image expected to be under a container -->
+                <article class="card-under-top-image relative"> <!-- Article semantic tag for card type container-->
+                    <img src="./media/ilustrations/image-18.png" alt="img" class="under-image"> <!-- Image expected to be under a container -->
                     <div class="over-text-container silver-background"> <!-- Text container for superposition with under image -->
                         <h4 class="normal-font grey-font">Creating Streamlined Safeguarding Processes with OneRen</h4>
                         <a href="#" class="relative green-font right-arrow">Readmore </a>
                     </div>
                 </article>
                 <article class="card-under-top-image relative">
-                    <img src="./media/ilustrations/image 19.png" alt="img" class="under-image">
+                    <img src="./media/ilustrations/image-19.png" alt="img" class="under-image">
                     <div class="over-text-container silver-background">
                         <h4 class="normal-font grey-font">What are your safeguarding responsibilities and how can you manage them?</h4>
                         <a href="#" class="relative green-font right-arrow">Readmore </a>
                     </div>
                 </article>
                 <article class="card-under-top-image relative">
-                    <img src="./media/ilustrations/image 20.png" alt="img" class="under-image">
+                    <img src="./media/ilustrations/image-20.png" alt="img" class="under-image">
                     <div class="over-text-container silver-background">
                         <h4 class="normal-font grey-font">Revamping the Membership Model with Triathlon Australia</h4>
                         <a href="#" class="relative green-font right-arrow">Readmore </a>
