index Frame-14 solved, README updated

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <h4 class="green-font">Tim Smith</h4>
                 <p class="l-grey-font">British Dragon Boat Racing Association</p>
                 <div class="flex-no-wrap justify-content-between">
-                    <img src="./media/ilustrations/Frame-14.png 14.png" alt="img" class="flex-0">
+                    <img src="./media/ilustrations/Frame-14.png" alt="img" class="flex-0">
                     <a class="normal-p green-font right-arrow relative">Meet all customers </a>
                 </div>
             </div>
