added lazy load to images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="main-header silver-background flex-no-wrap justify-content-around align-items-center">
         <div class="log-container">
-            <img src="./media/Logo.svg" alt="logo"> <!-- page logo, can be changed -->
+            <img loading="lazy" src="./media/Logo.svg" alt="logo"> <!-- page logo, can be changed -->
         </div>
         <nav> <!-- Main header nav, semantic use of HTML as is expected to be an navigation link container -->
             <ul class="w-100 flex-no-wrap justify-content-between no-style-list"> <!-- List -->
@@ -38,7 +38,7 @@
                 <p class="normal-p grey-font">Where to grow your business as a photographer: site or social media?</p>
                 <a href="#" class="button green-background white-font">Register</a>
             </div>
-            <img src="./media/ilustrations/Illustration.png" alt="" class="left-image">
+            <img loading="lazy" src="./media/ilustrations/Illustration.png" alt="" class="left-image">
             <div class="absolute-bottom-center">
                 <i class="full-dot"></i><i class="empty-dot"></i><i class="empty-dot"></i>
             </div>
@@ -46,31 +46,31 @@
         <section class="padded-section white-background text-center">
             <h2 class="big-font d-grey-font">Our Clients</h2>
             <p class="normal-p grey-font">We have been working with some Fortune 500+ clients</p>
-            <img src="./media/ilustrations/Clients-Logos.png" alt="" class="w-100"> <!-- Long img for logos, can be changed for various images for flex-wrap responsive -->
+            <img loading="lazy" src="./media/ilustrations/Clients-Logos.png" alt="" class="w-100"> <!-- Long img for logos, can be changed for various images for flex-wrap responsive -->
         </section>
         <section class="white-background text-center"> <!-- Padded section with text center aligned -->
             <h2 class="short-title d-grey-font big-font">Manage your entire community in a single system</h2>
             <p class="normal-p grey-font">Who is Nextcent suitable for?</p>
             <div class="flex-wrap justify-content-around">
                 <article class="card-top-image text-center"> <!-- Simple card like article, with top image, title and text -->
-                    <img class="center-image" src="./media/icons/Icon-people-green.png" alt="img">
+                    <img loading="lazy" class="center-image" src="./media/icons/Icon-people-green.png" alt="img">
                     <h3 class="big-font d-grey-font">Membership Organisations</h3>
                     <p class="normal-p grey-font">Our membership management software provides full automation of membership renewals and payments</p>
                 </article>
                 <article class="card-top-image text-center">
-                    <img class="center-image" src="./media/icons/Icon-building-green.png" alt="img">
+                    <img loading="lazy" class="center-image" src="./media/icons/Icon-building-green.png" alt="img">
                     <h3 class="big-font d-grey-font">National Associations</h3>
                     <p class="normal-p grey-font">Our membership management software provides full automation of membership renewals and payments</p>
                 </article>
                 <article class="card-top-image text-center">
-                    <img class="center-image" src="./media/icons/Icon-hands-green.png" alt="img">
+                    <img loading="lazy" class="center-image" src="./media/icons/Icon-hands-green.png" alt="img">
                     <h3 class="big-font d-grey-font">Clubs And Groups</h3>
                     <p class="normal-p grey-font">Our membership management software provides full automation of membership renewals and payments</p>
                 </article>
             </div>
         </section>
         <section class="left-image-section flex-no-wrap padded-section align-items-center"> <!-- Padded section -->
-            <img src="./media/ilustrations/Frame-35.png" alt="img">
+            <img loading="lazy" src="./media/ilustrations/Frame-35.png" alt="img">
             <div class="text-container">
                 <h3 class="big-font d-grey-font">The unseen of spending three years at Pixelgrade</h3>
                 <p class="normal-p grey-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
@@ -84,28 +84,28 @@
             </div>
             <div class="grid g-t_c-2 g-t_r-2 w-50"> <!-- Simple grid of 2x2 -->
                 <div class="compact-left-image-section flex-no-wrap align-items-center justify-content-center"> <!-- Item for grid, simple div with left image and text -->
-                    <img src="./media/icons/Icon-people.png" alt="icon" class="flex-0"> <!-- Image -->
+                    <img loading="lazy" src="./media/icons/Icon-people.png" alt="icon" class="flex-0"> <!-- Image -->
                     <div class="compact-text-container"> <!-- Text container -->
                         <h4 class="medium-font d-grey-font">2,245,341</h4>
                         <p class="normal-p grey-font">Members</p>
                     </div>
                 </div>
                 <div class="compact-left-image-section flex-no-wrap align-items-center justify-content-center">
-                    <img src="./media/icons/Icon-hands.png" alt="icon" class="flex-0">
+                    <img loading="lazy" src="./media/icons/Icon-hands.png" alt="icon" class="flex-0">
                     <div class="compact-text-container">
                         <h4 class="medium-font d-grey-font">46,328</h4>
                         <p class="normal-p grey-font">clubs</p>
                     </div>
                 </div>
                 <div class="compact-left-image-section flex-no-wrap align-items-center justify-content-center">
-                    <img src="./media/icons/Icon-sofa.png" alt="icon" class="flex-0">
+                    <img loading="lazy" src="./media/icons/Icon-sofa.png" alt="icon" class="flex-0">
                     <div class="compact-text-container">
                         <h4 class="medium-font d-grey-font">828,867</h4>
                         <p class="normal-p grey-font">Event Bookings</p>
                     </div>
                 </div>
                 <div class="compact-left-image-section flex-no-wrap align-items-center justify-content-center">
-                    <img src="./media/icons/Icon-card.png" alt="icon" class="flex-0">
+                    <img loading="lazy" src="./media/icons/Icon-card.png" alt="icon" class="flex-0">
                     <div class="compact-text-container">
                         <h4 class="-font d-grey-font">1,926,436</h4>
                         <p class="medium-p grey-font">Payments</p>
@@ -114,7 +114,7 @@
             </div>
         </section>
         <section class="left-image-section white-background flex-no-wrap justify-content-around align-items-center padded-section"> <!-- Padded section -->
-            <img src="./media/ilustrations/pana.png" alt="img">
+            <img loading="lazy" src="./media/ilustrations/pana.png" alt="img">
             <div class="text-container">
                 <h3 class="d-grey-font big-font">How to design your site footer like we did</h3>
                 <p class="normal-p">Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero ultrices mollis. In hac habitasse platea dictumst. Vivamus vehicula leo dui, at porta nisi facilisis finibus. In euismod augue vitae nisi ultricies, non aliquet urna tincidunt. Integer in nisi eget nulla commodo faucibus efficitur quis massa. Praesent felis est, finibus et nisi ac, hendrerit venenatis libero. Donec consectetur faucibus ipsum id gravida.</p>
@@ -122,13 +122,13 @@
             </div>
         </section>
         <section class="silver-background flex-no-wrap left-image-section justify-content-center align-items-center"> <!-- Non-padded section, posibly an opinions section -->
-            <img src="./media/ilustrations/image-9.png" alt="img" class="sm-hide">
+            <img loading="lazy" src="./media/ilustrations/image-9.png" alt="img" class="sm-hide">
             <div class="compact-text-container w-50">
                 <p class="normal-p grey-font">Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien, vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.</p>
                 <h4 class="green-font">Tim Smith</h4>
                 <p class="l-grey-font">British Dragon Boat Racing Association</p>
                 <div class="flex-no-wrap justify-content-between">
-                    <img src="./media/ilustrations/Frame-14.png" alt="img" class="flex-0">
+                    <img loading="lazy" src="./media/ilustrations/Frame-14.png" alt="img" class="flex-0">
                     <a class="normal-p green-font right-arrow relative">Meet all customers </a>
                 </div>
             </div>
@@ -140,21 +140,21 @@
             </div>
             <div class="flex-wrap justify-content-around align-items-center"> <!-- Container for articles -->
                 <article class="card-under-top-image relative"> <!-- Article semantic tag for card type container-->
-                    <img src="./media/ilustrations/image-18.png" alt="img" class="under-image"> <!-- Image expected to be under a container -->
+                    <img loading="lazy" src="./media/ilustrations/image-18.png" alt="img" class="under-image"> <!-- Image expected to be under a container -->
                     <div class="over-text-container silver-background"> <!-- Text container for superposition with under image -->
                         <h4 class="normal-font grey-font">Creating Streamlined Safeguarding Processes with OneRen</h4>
                         <a href="#" class="relative green-font right-arrow">Readmore </a>
                     </div>
                 </article>
                 <article class="card-under-top-image relative">
-                    <img src="./media/ilustrations/image-19.png" alt="img" class="under-image">
+                    <img loading="lazy" src="./media/ilustrations/image-19.png" alt="img" class="under-image">
                     <div class="over-text-container silver-background">
                         <h4 class="normal-font grey-font">What are your safeguarding responsibilities and how can you manage them?</h4>
                         <a href="#" class="relative green-font right-arrow">Readmore </a>
                     </div>
                 </article>
                 <article class="card-under-top-image relative">
-                    <img src="./media/ilustrations/image-20.png" alt="img" class="under-image">
+                    <img loading="lazy" src="./media/ilustrations/image-20.png" alt="img" class="under-image">
                     <div class="over-text-container silver-background">
                         <h4 class="normal-font grey-font">Revamping the Membership Model with Triathlon Australia</h4>
                         <a href="#" class="relative green-font right-arrow">Readmore </a>
@@ -165,13 +165,13 @@
         <section class="silver-background"> <!-- Las section -->
             <div class="text-container text-center padded-section">
                 <h2 class="bigger-font grey-font">Pellentesque suscipit fringilla libero eu.</h2>
-                <a href="#" class="button green-background white-font">Get a Demo <img src="./media/icons/Right-arrow-white.svg" alt="right-arrow" class="logo"></a>
+                <a href="#" class="button green-background white-font">Get a Demo <img loading="lazy"  src="./media/icons/Right-arrow-white.svg" alt="right-arrow" class="logo"></a>
             </div>
         </section>
         <!-- Footer page -->
         <footer class="main-footer dark-background white-font flex-no-wrap justify-content-around padded-section">
             <div class="compact-text-container">
-                <img src="./media/Logo-2.svg" alt="Logo" class="margin-bottom">
+                <img loading="lazy" src="./media/Logo-2.svg" alt="Logo" class="margin-bottom">
                 <p class="normal-p">Copyright © 2020 Nexcent ltd.</p>
                 <p class="normal-p">All rights reserved</p>
                 <p class="normal-p">
@@ -197,7 +197,7 @@
                 </ul>
                 <ul class="no-style-list flex-item-margin">
                     <li class="bold medium-font">Stay up to date</li>
-                    <li class=" transparent-white-background"><input type="text" placeholder="Your email address" class="inherit-a fncy-input"><img src="./media/icons/send.svg" alt="send" class="logo"></li>
+                    <li class=" transparent-white-background"><input type="text" placeholder="Your email address" class="inherit-a fncy-input"><img loading="lazy" src="./media/icons/send.svg" alt="send" class="logo"></li>
                 </ul>
             </div>
         </footer>
